# NexusMind

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh  stop.sh
backend/: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  test_bilibili.py  test_bilibili_parser.py
backend/agents/: code_agent.py  collector_agent.py  knowledge_agent.py  memory_agent.py
backend/auth/: impersonation.py  oauth_handler.py  qrcode_auth.py  session_middleware.py  token_store.py  user_store.py
backend/db/migrations/: 001_add_user_id.py
backend/memory/: hybrid_search.py  importance_scorer.py  memory_schema.py  memory_store.py
backend/parsers/: audio_parser.py  bilibili_parser.py  pdf_parser.py  text_parser.py  video_parser.py  vision_parser.py
backend/routers/: admin.py  data_management.py
backend/tests/: conftest.py  test_auth_endpoints.py  test_data_management.py  test_phase1.py  test_session_middleware.py  test_user_store.py
backend/tools/: embedder.py  exec_tools.py  llm.py  mcp_tools.py  memory_builder.py  sync_progress.py
backend/tts/: xtts_output.py
docs/superpowers/plans/: 2026-03-18-multi-chat-panel-implementation.md  2026-03-19-user-isolation-implementation.md  2026-03-19-user-isolation-plan.md  2026-03-20-data-management-implementation.md  2026-04-02-media-transcription-implementation.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: types.ts  (+1 more)
(+19 files in other folders)
