[project]
name = "nexusmind-backend"
version = "1.2.0"
description = "NexusMind - Personal AI Memory System Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "faiss-cpu>=1.7.4",
    "cryptography>=42.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "schedule>=1.2.0",
    "trafilatura>=1.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdown>=3.5.0",
    "pdfplumber>=0.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
